# mk

./: CHANGELOG.md  README.md  flake.nix  mk.cabal  plan.org  stack.yaml
.github/workflows/: nix-build.yml
src/: Main.hs  Options.hs
src/Mk/: Char8.hs  Config.hs  Evaluators.hs  Options.hs  Parser.hs  Template.hs
src/Mk/Config/: Prop.hs
src/Mk/Evaluators/: Config.hs  Filename.hs  Haskell.hs  Prop.hs  System.hs  Time.hs  Types.hs
src/Mk/Util/: StaticAssert.hs
