cabal-version:      2.2
name:               mk
version:            0.1.0.0
synopsis:           Create files from templates
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
copyright:          Copyright (C) 2019 Jakob Rath
category:           Text
build-type:         Simple
extra-source-files: CHANGELOG.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

executable mk
  import:           warnings
  main-is:          Main.hs
  other-modules:    Mk.Config
                  , Mk.Config.Prop
                  , Mk.Evaluators
                  , Mk.Parser
                  , Mk.Template
                  , Mk.Util.StaticAssert
  build-depends:    base >=4.12 && <5
                  , containers
                  , dhall
                  , extra
                  , filepath
                  , Glob
                  , hostname
                  , lens
                  , lens-aeson
                  , megaparsec
                  , mtl
                  , optparse-applicative
                  , path
                  , path-io
                  , process
                  , safe
                  , template-haskell
                  , text
                  , time
                  , transformers
                  , unix
                  , yaml
  hs-source-dirs:   src
  default-language: Haskell2010
